--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -162,7 +162,8 @@
             android:windowSoftInputMode="stateHidden"/>
         <activity
             android:name=".ui.fragments.profile.PhotoSwitcherActivity"
-            android:theme="@style/Theme.Topface.NoActionBar.Fullscreen"/>
+            android:theme="@style/Topface.Theme.TransparentActionBarActivity"
+            />
         <activity
             android:name=".ui.edit.EditProfileActivity"
             android:screenOrientation="portrait"/>
