- Переезжаем на новый AdMob аккаунт, поэтому изменились Ad Unit ID - Отправляем в admob информацию о возрасте юзера - Поправлен краш - https://rink.hockeyapp.net/manage/apps/26531/app_versions/69/crash_reasons/20343662 - Удален неиспользуемые receiver - HashMap заменен на SparseArray в ConnectionChangeReceiver

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -377,11 +377,6 @@
             android:launchMode="singleInstance"
             android:theme="@style/Theme.Topface.NoActionBar"/>
 
-        <activity
-            android:name="me.faan.sdk.PlayerActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize"
-            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"/>
-
         <!-- Alias for main Activity from first version. Just in case of previous problems with FB -->
         <activity-alias
             android:name=".ui.MainActivity"
@@ -437,6 +432,7 @@
         </receiver>
 
         <!-- Amazon In-App Purchasing -->
+        <!--suppress AndroidDomInspection -->
         <receiver
             android:name="com.amazon.inapp.purchasing.ResponseReceiver"
             tools:ignore="ExportedReceiver">
