--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -176,7 +176,9 @@
         <activity
             android:name=".ui.settings.SettingsContainerActivity"
             android:screenOrientation="portrait"/>
-        <activity android:name=".ui.BanActivity"/>
+        <activity
+            android:name=".ui.BanActivity"
+            android:screenOrientation="portrait" />
         <activity android:name=".ui.BlackListActivity"/>
 
         <activity
