--- a/src/androidTest/java/AndroidManifest.xml
+++ b/src/androidTest/java/AndroidManifest.xml
@@ -8,7 +8,7 @@
          this package needs to link against the android.test library,
          which is needed when building test cases. -->
     <application>
-        <uses-library android:name="android.test.runner" />
+        <uses-library android:name="android.test.runner"/>
     </application>
     <!--
     This declares that this application uses the instrumentation test runner targeting
@@ -17,7 +17,7 @@
     -->
     <!--suppress AndroidDomInspection -->
     <instrumentation
-        android:name="android.test.InstrumentationTestRunner"
+        android:name="com.google.android.apps.common.testing.testrunner.GoogleInstrumentationTestRunner"
         android:label="Tests for com.topface.topface"
-        android:targetPackage="com.topface.topface" />
+        android:targetPackage="com.topface.topface"/>
 </manifest>
