--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -56,6 +56,7 @@
         android:allowBackup="true"
         android:hardwareAccelerated="true"
         android:icon="@drawable/ic_launcher"
+        android:supportsRtl="false"
         android:label="@string/app_name"
         android:logo="@drawable/ic_home_topface_white"
         android:theme="@style/Theme.Topface">
