--- a/build.gradle
+++ b/build.gradle
@@ -144,7 +144,7 @@ dependencies {
 
     androidTestCompile 'com.jakewharton.espresso:espresso:1.1-r3'
 
-    compile 'com.vk:androidsdk:+'
+    compile 'com.vk:androidsdk:1.3.2'
 }
 
 
