- Добавлен LayoutTransition в чяте - Избавляемся от черного фона в чяте при скрытии клавиатуры

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -185,6 +185,7 @@
         <activity
             android:name=".ui.ChatActivity"
             android:parentActivityName=".ui.NavigationActivity"
+            android:theme="@style/Theme.Topface.Chat"
             android:windowSoftInputMode="stateUnchanged|adjustResize">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
