--- a/build.gradle
+++ b/build.gradle
@@ -117,7 +117,7 @@ dependencies {
     compile fileTree(dir: 'libs', exclude: 'amazon/*.jar', include: '*.jar')
     //Topface sub libs
     compile project(':libs:IllustratedTextView')
-    compile project(':libs:AndroidStatistics')
+    compile project(':libs:statistics-android')
     //Third party libs
     compile('ch.acra:acra:4.5.0') {
         //Удаляем предоставляемыю acra зависимость org.json, так как она все рвно не нужна
@@ -138,22 +138,13 @@ dependencies {
     //Аннотации вроде @NonNull и @*Res для обозначения переменных
     compile 'com.android.support:support-annotations:19.1.0'
     //Для Амазона нужна библиотека для поддержки in-app покупок
-    amazonCompile files('libs/amazon/*.jar')
+    amazonCompile fileTree(dir:'libs/amazon', include:'*.jar')
 
     compile project(':libs:tf-offerwall:sdk')
 
     androidTestCompile 'com.jakewharton.espresso:espresso:1.1-r3'
 
     compile 'com.vk:androidsdk:1.3.2'
-}
-
-
-project(':libs:AndroidStatistics') {
-    apply plugin: 'com.android.library'
-    //noinspection GradleMisplacedStatement
-    repositories {
-        mavenCentral()
-    }
 }
 
 project(':libs:IllustratedTextView') {
