--- a/settings.gradle
+++ b/settings.gradle
@@ -5,7 +5,7 @@ include ':libs:IllustratedTextView', ':libs:statistics-android'
 //Third part libs
 include ':libs:Android-ViewPagerIndicator', ':libs:PullToRefresh', ':libs:PhotoView', ':libs:UniversalImageLoader'
 //Social networks
-include ':libs:Facebook', ':libs:odnoklassniki'
+include ':libs:facebook-android-sdk:facebook', ':libs:odnoklassniki'
 //Ad networs
 include ':libs:mopub-android-sdk'
 //Topface Offerwall
