--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -66,6 +66,10 @@
             android:value="@integer/google_play_services_version"
             tools:replace="value" />
 
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/app_id" />
+
         <!-- activity -->
         <activity
             android:name=".ui.NavigationActivity"
@@ -310,6 +314,8 @@
 
             </intent-filter>
         </activity>
+
+        <activity android:name="com.facebook.LoginActivity" />
 
         <!-- ADS -->
 
