- Переезжаем на Android Gradle plugin 0.14 - Включен jumboMode при сборке (нужен для снятия ограничения на количество строк в dex файле) - Отключен старый useAaptPngCruncher, будем допиливать все картинки для нового

--- a/build.gradle
+++ b/build.gradle
@@ -86,6 +86,8 @@ android {
         release {
             //noinspection GroovyAssignabilityCheck
             signingConfig signingConfigs.release
+            minifyEnabled true
+            shrinkResources true
         }
         //Специальный тип сборки для тестирования отделом QA,
         //пишем время сборки и SHA текущего комита, это нужно для идентификации сборки
@@ -105,6 +107,10 @@ android {
         exclude 'LICENSE.txt'
     }
 
+    //@see https://code.google.com/p/android/issues/detail?id=40409
+    dexOptions {
+        jumboMode = true
+    }
 }
 
 dependencies {
@@ -247,5 +253,4 @@ android {
                 "MissingQuantity"
         //Временно отключена проверка из-за того, что нет many формы в польском и украинском в дальнейшем поправим (пока many = other)
     }
-    aaptOptions.useAaptPngCruncher = true
 }
