--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ ANDROID_BUILD_TOOLS_VERSION=21.1.1
 ANDROID_BUILD_GRADLE_PLUGIN_VERSION=com.android.tools.build:gradle:0.14.+
 #Версия Android Support Library
 ANDROID_BUILD_SUPPORT_LIBRARY_VERSION=com.android.support:support-v4:19.1.+
-#Версия Appcompat из Support §
+#Версия Appcompat из Support Library
 ANDROID_BUILD_SUPPORT_APPCOMPAT_VERSION=com.android.support:appcompat-v7:19.1.+
 #Версия Google Play Services
 GOOGLE_PLAY_SERVICES_VERSION=com.google.android.gms:play-services:5.0.+
