-Adds android-sdk-manager gradle plugin

--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
     }
     dependencies {
         classpath rootProject.ANDROID_BUILD_GRADLE_PLUGIN_VERSION
+        classpath 'com.jakewharton.sdkmanager:gradle-plugin:0.12.+'
     }
 }
 
@@ -19,6 +20,7 @@ repositories {
     mavenCentral()
 }
 
+apply plugin: 'android-sdk-manager'
 apply plugin: 'com.android.application'
 
 android {
