--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ ANDROID_BUILD_MAX_SDK_VERSION=19
 #Версия скриптов сборки Android (часть SDK)
 ANDROID_BUILD_TOOLS_VERSION=21.1.1
 #Версия Gradle Android Plugin
-ANDROID_BUILD_GRADLE_PLUGIN_VERSION=com.android.tools.build:gradle:0.14.+
+ANDROID_BUILD_GRADLE_PLUGIN_VERSION=com.android.tools.build:gradle:0.14.2
 #Версия Android Support Library
 ANDROID_BUILD_SUPPORT_LIBRARY_VERSION=com.android.support:support-v4:19.1.+
 #Версия Appcompat из Support Library
