- localist pull - Английский теперь перевод по умолчанию и можно прсото вызывать   localist status, вместо localist status -l en

--- a/.localistrc
+++ b/.localistrc
@@ -2,6 +2,8 @@
 name = Topface-mobile
 language = ru
 format = androidxml
+required_translations = en
+
 
 [translation]
 service = http://l10n.topface.com/
