--- a/build.gradle
+++ b/build.gradle
@@ -168,6 +168,10 @@ dependencies {
 
     compile 'com.vk:androidsdk:1.3.4'
     compile 'com.facebook.android:facebook-android-sdk:3.20.0'
+    //NineOldAndroids
+    compile 'com.nineoldandroids:library:2.4.0'
+    //ListViewAnimations
+    compile 'com.nhaarman.listviewanimations:lib-core:3.1.0@aar'
 }
 
 project(':libs:IllustratedTextView') {
