--- a/build.gradle
+++ b/build.gradle
@@ -88,7 +88,7 @@ android {
         release {
             //noinspection GroovyAssignabilityCheck
             signingConfig signingConfigs.release
-            minifyEnabled true
+            minifyEnabled false
             shrinkResources true
         }
         //Специальный тип сборки для тестирования отделом QA,
