--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -367,7 +367,7 @@
         <!-- gcm -->
         <service android:name=".GcmIntentService"/>
         <receiver
-            android:name="com.topface.topface.utils.gcmutils.GcmBroadcastReceiver"
+            android:name=".utils.gcmutils.GcmBroadcastReceiver"
             android:permission="com.google.android.c2dm.permission.SEND">
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE"/>
@@ -419,7 +419,7 @@
         </receiver>
 
         <receiver
-            android:name="com.topface.topface.receivers.NotificationClosedReceiver"
+            android:name=".receivers.NotificationClosedReceiver"
             tools:ignore="ExportedReceiver">
             <intent-filter>
                 <action android:name="com.topface.topface.NOTIFICATION_CLOSED"/>
