--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -152,6 +152,12 @@
             </intent-filter>
         </activity>
 
+
+        <activity
+            android:name=".ui.SslErrorActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Dialog" />
         <activity
             android:name=".ui.TopfaceAuthActivity"
             android:screenOrientation="portrait"
