#20935: show popup not valid certificate

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -156,7 +156,7 @@
             android:name=".ui.SslErrorActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Dialog" />
+            android:theme="@style/Theme.Transparent" />
         <activity
             android:name=".ui.GiftsActivity"
             android:screenOrientation="portrait"
