--- a/build.gradle
+++ b/build.gradle
@@ -141,7 +141,8 @@ dependencies {
     compile rootProject.ANDROID_BUILD_SUPPORT_LIBRARY_VERSION
     compile rootProject.ANDROID_BUILD_SUPPORT_APPCOMPAT_VERSION
     //Google play services
-    compile rootProject.GOOGLE_PLAY_SERVICES_VERSION
+    compile "com.google.android.gms:play-services-base:6.5.87"
+    compile "com.google.android.gms:play-services-ads:6.5.87"
     //All jar libs
     compile fileTree(dir: 'libs', exclude: 'amazon/*.jar', include: '*.jar')
     //Topface sub libs
@@ -165,7 +166,7 @@ dependencies {
     //Social networks SDK
     compile project(':libs:odnoklassniki')
     //Аннотации вроде @NonNull и @*Res для обозначения переменных
-    compile 'com.android.support:support-annotations:19.1.0'
+    compile 'com.android.support:support-annotations:21.0.3'
     //Для Амазона нужна библиотека для поддержки in-app покупок
     amazonCompile fileTree(dir: 'libs/amazon/', include: '*.jar')
 
@@ -174,7 +175,7 @@ dependencies {
     androidTestCompile 'com.jakewharton.espresso:espresso:1.1-r3'
 
     compile 'com.vk:androidsdk:1.3.6'
-    compile 'com.facebook.android:facebook-android-sdk:3.20.0'
+    compile 'com.facebook.android:facebook-android-sdk:3.22.0'
     //NineOldAndroids
     compile 'com.nineoldandroids:library:2.4.0'
     //ListViewAnimations
