#35064 Клава открывается при переходе в чат из уведомления, Клава открывается если перейти из чата в профиль и обратно.

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -193,8 +193,8 @@
             android:name=".ui.ChatActivity"
             android:parentActivityName=".ui.NavigationActivity"
             android:theme="@style/Theme.Topface.Chat"
-            android:windowSoftInputMode="stateUnchanged|adjustResize">
-            <meta-data
+            android:windowSoftInputMode="adjustResize">
+        <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.NavigationActivity" />
         </activity>
