#35656: added activity and photoblog fragment

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -151,7 +151,7 @@
             </intent-filter>
         </activity>
 
-
+        <activity android:name=".ui.AddToLeaderActivity" />
         <activity
             android:name=".ui.SslErrorActivity"
             android:launchMode="singleTask"
