#35656: photoblog like in design

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -209,6 +209,15 @@
         </activity>
 
         <activity
+            android:name=".ui.OwnProfileActivity"
+            android:parentActivityName=".ui.NavigationActivity"
+            android:screenOrientation="portrait">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ui.NavigationActivity" />
+        </activity>
+
+        <activity
             android:name=".ui.ComplainsActivity"
             android:parentActivityName=".ui.NavigationActivity"
             android:screenOrientation="portrait">
