#35656: edited by pull-request comments

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -151,7 +151,9 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.AddToLeaderActivity" />
+        <activity
+            android:name=".ui.AddToLeaderActivity"
+            android:parentActivityName=".ui.NavigationActivity" />
         <activity
             android:name=".ui.SslErrorActivity"
             android:launchMode="singleTask"
