--- a/build.gradle
+++ b/build.gradle
@@ -70,7 +70,6 @@ android {
 
 
         buildConfigField "long", "BUILD_TIME", "0L";
-        buildConfigField "boolean", "FORTUMO_ENABLE", "false";
         buildConfigField "String", "GIT_HEAD_SHA", "null";
         buildConfigField "com.topface.billing.MarketApiType", "MARKET_API_TYPE",
                 "com.topface.billing.MarketApiType.GOOGLE_PLAY";
@@ -158,7 +157,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.3'
 
     //OpenIAB
-    compile 'org.onepf:openiab:0.9.8.1'
+    compile 'org.onepf:openiab:0.9.8.4'
 
     compile project(':libs:Android-ViewPagerIndicator')
     compile project(':libs:PullToRefresh')
@@ -169,7 +168,7 @@ dependencies {
     //Аннотации вроде @NonNull и @*Res для обозначения переменных
     compile 'com.android.support:support-annotations:21.0.2'
     //Для Амазона нужна библиотека для поддержки in-app покупок
-    amazonCompile fileTree(dir: 'libs/amazon/', include: '*.jar')
+    amazonCompile 'com.amazon:in-app-purchasing:2.0.1'
 
     compile project(':libs:tf-offerwall:sdk')
 
