--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -333,7 +333,7 @@
 
         <activity
             android:name="com.sponsorpay.publisher.ofw.SPOfferWallActivity"
-            android:configChanges="orientation" />F
+            android:configChanges="orientation" />
 
         <activity
             android:name=".utils.offerwalls.supersonicads.SupersonicWallActivity"
