--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -189,6 +189,12 @@
             android:name=".ui.BanActivity"
             android:theme="@style/Theme.Topface.Ban"
             android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".ui.RestoreAccountActivity"
+            android:theme="@style/Theme.Topface.RestoreAccountActivity"
+            android:screenOrientation="portrait" />
+
         <activity android:name=".ui.BlackListActivity" />
 
         <activity
