--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -72,9 +72,9 @@
         <!-- activity -->
         <activity
             android:name=".ui.NavigationActivity"
-            android:launchMode="singleTask"
             android:configChanges="locale|screenSize|orientation"
             android:screenOrientation="portrait"
+            android:launchMode="singleTop"
             android:theme="@style/Theme.Topface.ActionbarOverlay"
             android:windowSoftInputMode="stateHidden|adjustResize">
             <intent-filter>
