--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -74,7 +74,6 @@
             android:name=".ui.NavigationActivity"
             android:configChanges="locale|screenSize|orientation"
             android:screenOrientation="portrait"
-            android:launchMode="singleTop"
             android:theme="@style/Theme.Topface.ActionbarOverlay"
             android:windowSoftInputMode="stateHidden|adjustResize">
             <intent-filter>
@@ -128,27 +127,12 @@
                     android:pathPrefix="/confirm"
                     android:scheme="https" />
 
-                />
-            </intent-filter>
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-
                 <data
                     android:host="@string/offerwall_host"
                     android:scheme="@string/default_sheme" />
-            </intent-filter>
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
 
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="@string/default_sheme" />
 
-                <data android:scheme="@string/default_sheme"
-
-                    />
             </intent-filter>
         </activity>
 
