--- a/version.properties
+++ b/version.properties
@@ -1,2 +1,4 @@
-#Tue Apr 07 22:00:20 MSK 2015
-VERSION_QA_BUILD=5
+#Wed Apr 08 09:40:47 MSK 2015
+VERSION_QA_BUILD=6
+VERSION_CODE=30000
+VERSION_NAME=3.0.0
