--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -159,7 +159,11 @@
 
         <activity
             android:name=".ui.AddToLeaderActivity"
-            android:parentActivityName=".ui.NavigationActivity" />
+            android:parentActivityName=".ui.NavigationActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ui.NavigationActivity" />
+        </activity>
         <activity
             android:name=".ui.SslErrorActivity"
             android:launchMode="singleTask"
@@ -173,8 +177,8 @@
             android:screenOrientation="portrait"
             android:theme="@style/Theme.Topface.NoActionBar" />
         <activity
-            android:label="@string/edit_my_city"
             android:name=".ui.CitySearchActivity"
+            android:label="@string/edit_my_city"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.Topface.Light"
             android:windowSoftInputMode="stateVisible" />
@@ -195,13 +199,13 @@
         </activity>
         <activity
             android:name=".ui.BanActivity"
-            android:theme="@style/Theme.Topface.Ban"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.Topface.Ban" />
 
         <activity
             android:name=".ui.RestoreAccountActivity"
-            android:theme="@style/Theme.Topface.RestoreAccountActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.Topface.RestoreAccountActivity" />
 
         <activity android:name=".ui.BlackListActivity" />
 
