--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -75,8 +75,8 @@
             android:configChanges="locale|screenSize|orientation"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.Topface.ActionbarOverlay"
-            android:windowSoftInputMode="stateHidden|adjustResize">
-            <intent-filter>
+            android:windowSoftInputMode="stateAlwaysHidden|adjustResize">
+        <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
