--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -76,7 +76,7 @@
             android:screenOrientation="portrait"
             android:theme="@style/Theme.Topface.ActionbarOverlay"
             android:windowSoftInputMode="stateAlwaysHidden|adjustResize">
-        <intent-filter>
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
@@ -344,6 +344,14 @@
         </activity>
 
         <activity android:name="com.facebook.LoginActivity" />
+
+        <activity
+            android:name=".ui.SMSInviteActivity"
+            android:parentActivityName=".ui.NavigationActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ui.NavigationActivity" />
+        </activity>
 
         <!-- ADS -->
 
