-Admob interstitials in feed

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -349,7 +349,9 @@
 
         <activity
             android:name="com.google.android.gms.ads.AdActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
+            android:theme="@android:style/Theme.Translucent"
+            />
 
         <activity
             android:name="com.sponsorpay.publisher.ofw.SPOfferWallActivity"
