--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -28,6 +28,11 @@
 
     <uses-permission android:name="com.android.vending.BILLING" />
 
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.WRITE_SMS" />
+
     <uses-feature
         android:name="android.hardware.location.gps"
         android:required="false" />
@@ -42,6 +47,8 @@
 
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.WRITE_SMS" />
 
     <supports-screens
         android:anyDensity="true"
@@ -453,12 +460,17 @@
                 <action android:name="com.android.vending.INSTALL_REFERRER" />
             </intent-filter>
         </receiver>
-
         <receiver
             android:name=".receivers.NotificationClosedReceiver"
             tools:ignore="ExportedReceiver">
             <intent-filter>
                 <action android:name="com.topface.topface.NOTIFICATION_CLOSED" />
+            </intent-filter>
+        </receiver>
+
+        <receiver android:name=".ui.fragments.CatchSMSActions">
+            <intent-filter>
+                <action android:name="android.provider.Telephony.SMS_SEND" />
             </intent-filter>
         </receiver>
 
