--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -469,7 +469,7 @@
             </intent-filter>
         </receiver>
 
-        <receiver android:name=".receivers.CatchSMSActions">
+        <receiver android:name=".receivers.CatchSmsActions">
             <intent-filter>
                 <action android:name="android.provider.Telephony.SMS_SEND" />
             </intent-filter>
