--- a/build.gradle
+++ b/build.gradle
@@ -224,6 +224,9 @@ dependencies {
     compile 'com.nineoldandroids:library:2.4.0'
     //ListViewAnimations
     compile 'com.nhaarman.listviewanimations:lib-core:3.1.0@aar'
+
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
 }
 
 project(':libs:IllustratedTextView') {
