#39284 портретная ориентация для смс инвайтов

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -340,7 +340,8 @@
 
         <activity
             android:name=".ui.SMSInviteActivity"
-            android:parentActivityName=".ui.NavigationActivity">
+            android:parentActivityName=".ui.NavigationActivity"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.NavigationActivity" />
