--- a/build.gradle
+++ b/build.gradle
@@ -180,9 +180,8 @@ dependencies {
     //Android Support libs
     compile rootProject.ANDROID_BUILD_SUPPORT_LIBRARY_VERSION
     compile rootProject.ANDROID_BUILD_SUPPORT_APPCOMPAT_VERSION
-    compile 'com.android.support:design:22.2.0'
-    //Аннотации вроде @NonNull и @*Res для обозначения переменных
-    compile 'com.android.support:support-annotations:21.0.2'
+    compile rootProject.ANDROID_BUILD_DESIGN_SUPPORT_VERSION
+    compile rootProject.ANDROID_BUILD_ANNOTATIONS_SUPPORT_VERSION
     //Google play services
     compile "com.google.android.gms:play-services-base:7.3.0"
     compile "com.google.android.gms:play-services-gcm:7.3.0"
