--- a/gradle.properties
+++ b/gradle.properties
@@ -6,14 +6,16 @@
 #Минимальная версия Android SDK
 ANDROID_BUILD_MIN_SDK_VERSION=12
 #target и compile версия Android SDK, у нас они все равно всегда совадают и чаще всего равны последней версии Android
-ANDROID_BUILD_MAX_SDK_VERSION=21
+ANDROID_BUILD_MAX_SDK_VERSION=22
 #Версия скриптов сборки Android (часть SDK)
 ANDROID_BUILD_TOOLS_VERSION=21.1.2
 #Версия Gradle Android Plugin
 ANDROID_BUILD_GRADLE_PLUGIN_VERSION=com.android.tools.build:gradle:1.2.3
 #Версия Android Support Library
-ANDROID_BUILD_SUPPORT_LIBRARY_VERSION=com.android.support:support-v4:21.0.3
+ANDROID_BUILD_SUPPORT_LIBRARY_VERSION=com.android.support:support-v4:22.2.0
 #Версия Appcompat из Support Library
-ANDROID_BUILD_SUPPORT_APPCOMPAT_VERSION=com.android.support:appcompat-v7:21.0.3
+ANDROID_BUILD_SUPPORT_APPCOMPAT_VERSION=com.android.support:appcompat-v7:22.2.0
+ANDROID_BUILD_DESIGN_SUPPORT_VERSION=com.android.support:design:22.2.0
+ANDROID_BUILD_ANNOTATIONS_SUPPORT_VERSION=com.android.support:support-annotations:22.2.0
 #org.gradle.daemon=true
 org.gradle.parallel=true
