--- a/build.gradle
+++ b/build.gradle
@@ -190,6 +190,11 @@ dependencies {
     //All jar libs
     compile fileTree(dir: 'libs', exclude: 'amazon/*.jar', include: '*.jar')
     //Testing
+    testCompile 'junit:junit:4.12'
+    testCompile "org.mockito:mockito-core:1.10.19"
+    testCompile('org.robolectric:robolectric:2.4') {
+        exclude group: 'com.android.support'
+    }
     //Topface sub libs
     compile project(':libs:IllustratedTextView')
     compile project(':libs:statistics-android')
